# textindex

./: .gitignore  Cargo.toml  history.txt
src/: cmdlib.rs  cmds.rs  error.rs  index.rs  index2.rs  lib.rs  log.rs  main.rs  proc.rs  proc2.rs  proc3.rs  tmp_index.rs
src/index2/: files.rs  ids.rs  tmp_index.rs  word_map.rs  words.rs
src/proc3/: html_parse.rs  html_parse2.rs  indexer.rs  named_char.rs  stop_words.rs  threads.rs  txt_parse.rs
tests/: test_1.rs  test_index2.rs
