[package]
name = "TextIndex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
glob = "0.3"
toml = "0.7.3"
rustyline = "11.0.0"
walkdir = "2.3"
crossbeam = "0.8.2"
html5ever = "0.26.0"

[dependencies.nom]
version = "7.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0"

[dependencies.kparse]
#version = "3.0.2"
path = "../kparse"