[package]
name = "textindex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]

[dependencies]
glob = "0.3"
toml = "0.8.0"
rustyline = "12.0.0"
walkdir = "2.3"
crossbeam = "0.8.2"
html5ever = "0.26.0"
wildmatch = "2.1.1"
#tracing = { version = "0.1", default-features = false,  optional = true }
#tracing-subscriber = { version = "0.3.7", default-features = false, features = ["registry"] }

[dependencies.tracking-allocator]
version = "0.4.0"
#path = "../tracking-allocator"

[dependencies.nom]
version = "7.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0"

[dependencies.kparse]
version = "3.0.4"
path = "../../StableProjects/kparse"

[dependencies.blockfile2]
version = "1.0"
path = "../blockfile2"